Loads of changes to Big Ant Island.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gildes.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gildes.html
@@ -1,8 +1,9 @@
 {% extends "dnd/abstract/place.html" %}
 
 {% block locations %}
-    <p>..... in</p>
+    <p>..... inn</p>
     <ul>
         <li>Bard comes to play here</li>
+        <li>Drinking adventurer may get drunk.</li>
     </ul>
 {% endblock %}
