--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/overview.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/overview.html
@@ -60,6 +60,7 @@
                     You won't eat anything else.
                     Thirst after 1 day + Con hours: every hour FortDC10 + 1 for each check.
                     Hunger after 3 days + Con hours: every hour FortDC10 + 1 for each check.
+                    Damage: 1d6 non-lethal + fatigued, die when unconscious.
                 </li>
             </ul>
 
