--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
@@ -48,10 +48,16 @@
     <p>A strong guy who makes more than fishing spears as a hobby</p>
 
     <h4><a href="/dnd/characters/Nimry+sea-weed-lady.html">Nimry</a> - sea weed lady</h4>
-    <p>An old woman schooled in the powers of sea weeds</p>
+    <p>
+        An old woman schooled in the powers of sea weeds.
+        Can help with sleeping problems and has quest to defeat Aboleth
+    </p>
 
     <h4><a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a> - the brewery owner</h4>
-    <p>He ownes the brewery, but also a fish stand on the food market as his alter ego Moltabar. He secretly smuggles goods past Waukeen church.</p>
+    <p>
+        He ownes the brewery, but also a fish stand on the food market as his alter ego Moltabar.
+        He secretly smuggles goods past Waukeen church.
+    </p>
 
 {% endblock %}
 
@@ -60,6 +66,8 @@
 {% endblock %}
 
 {% block conditions %}
+    <p>These conditions apply once a day that they enter this area until the adventurers really go all the way.</p>
+
     <dl class="dc">
        <dt>EatDC: 13</dt>
        <dd>Can't resist to buy 2lb. of fish, without bargaining for 1sp</dd>
@@ -72,6 +80,28 @@
        <dt>BreathDC: 15</dt>
        <dd>Can't go through passage to <a href="cave-slums.html">cave slums</a></dd>
     </dl>
+    <dl class="dc">
+       <dt>SexDC: 15</dt>
+       <dd>Can't resist to inform for brothels</dd>
+    </dl>
+
+    <p>
+        Here is a list of ways to "go all the way".
+        Adventurers may pick up on these after a second time they fail their safe.
+    </p>
+    <ul>
+        <li>Breath: stand to breath the sea air at <a href="breakers-slums.html">breaker slums</a> for an hour</li>
+        <li>Eat: eat a fish prepared by <a href="/dnd/characters/Otalan+delicious-fish-merchant.html">Otalan</a>.</li>
+        <li>Drink: get drunk in master brewery at <a href="../trade-district/the-gildes.html">the gildes</a>.</li>
+        <li>
+            Sex: Visit brothel at
+            <a href="../trade-district/harbor/the-oceans-night+pleasure-house.html">The Oceans Night</a>.
+        </li>
+        <li>
+            Sleep: Become exhausted once or drink potion from
+            <a href="../../../characters/Nimry+sea-weed-lady.html">Nimry</a>
+        </li>
+    </ul>
 {% endblock %}
 
 {% block knowledges %}
