--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-left.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-left.html
@@ -29,9 +29,19 @@
 
 {% block knowledges %}
     <dl class="dc">
-       <dt>SurvivalDC:</dt>
-       <dd> >= 10 Large groups (around 10) of monstrous humanoids seem to walk on this beach with some regularity</dd>
-       <dd> >= 15 Formian workers (around 3 each time) are regularly walking on the beach.</dd>
+        <dt>SurvivalDC:</dt>
+        <dd> >= 10 Large groups (around 10) of monstrous humanoids seem to walk on this beach with some regularity</dd>
+        <dd>
+            >= 20 A smaller group of monstrous humanoids (around 3 each time) that leave steps as if on six feet (like Formians) are regularly walking on the beach.
+            However they do not have feet that resemble Formians.
+        </dd>
+    </dl>
+    <dl class="dc">
+        <dt>KnowledgeNatureDC:</dt>
+        <dd> 10 >= Formians are monstrous humanoids that are half ant, half human, which live in big colonies led by powerful mystical queens.</dd>
+        <dd> 15 >= Details about Workers and Warriors</dd>
+        <dd> 20 >= Details about Taskmasters and Myrmarchs</dd>
+        <dd> 25 >= Details about Queens</dd>
     </dl>
 {% endblock %}
 
