--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-center.html
@@ -3,6 +3,8 @@
 {% block title %}Inland center{% endblock %}
 {% block summary %}No summary{% endblock %}
 
+{% block todo %}Check water poison for strength{% endblock %}
+
 {% block events %}
     <p>no events</p>
 {% endblock %}
@@ -20,18 +22,45 @@
 {% endblock %}
 
 {% block traps %}
-    <p>no traps</p>
+    <p>All fruits have 20% chance of being poisonous as well as water from the stream.</p>
+    <dl class="dc">
+       <dt>FortDC: 14 (food)</dt>
+       <dd>2x 1d6 from random ability</dd>
+    </dl>
+    <dl class="dc">
+       <dt>FortDC: 20 (water from stream)</dt>
+       <dd>Fatigued & -10 Will saves</dd>
+    </dl>
 {% endblock %}
 
 {% block conditions %}
-    <p>Extreme dense growth.</p>
+    <p>
+        Extreme dense growth with some trees that seem to have been snapped in two that obstruct the way.
+    </p>
 {% endblock %}
 
 {% block knowledges %}
-   <dl class="dc">
-      <dt>NatureDC:</dt>
-      <dd> >=15 This land is very fertile due to the vulcanic soil</dd>
-   </dl>
+
+    <dl class="dc">
+       <dt>ListenDC:</dt>
+       <dd> 15 >= In darker area's you hear some animals that try to get away as you approach. So there is some life after all.</dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>NatureDC: (never saw vulcano's so -5 penalty)</dt>
+        <dd> >= 20 This land is very fertile due to the vulcanic soil.</dd>
+        <dt>NatureDC: (never saw vulcano's so -5 penalty)</dt>
+        <dd> >= 20 Trees got snapped due to sudden ruptures in the ground.</dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>SurvicalDC: (Food, penalty due to winter)</dt>
+        <dd> 15 >= Find food (20% chance on poison) </dd>
+        <dd>
+            20 >= Find food (fruits) and water (rain water) that is certainly not poisonous.
+                  Find food and water for another for every two points above 15.
+        </dd>
+    </dl>
 {% endblock %}
 
 {% block items %}
