--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
@@ -3,6 +3,8 @@
 {% block title %}Inland center{% endblock %}
 {% block summary %}No summary{% endblock %}
 
+{% block todo %}Description of environment{% endblock %}
+
 {% block events %}
     <p>no events</p>
 {% endblock %}
@@ -24,14 +26,34 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>Extreme dense growth.</p>
+    <p>
+        Extreme dense growth with some trees that seem to have been snapped in two that obstruct the way. Wind effect? No earthquake!
+    </p>
 {% endblock %}
 
 {% block knowledges %}
-   <dl class="dc">
-      <dt>NatureDC:</dt>
-      <dd> >=15 This land is very fertile due to the vulcanic soil</dd>
-   </dl>
+
+    <dl class="dc">
+       <dt>ListenDC:</dt>
+       <dd> 15 >= In darker area's you hear some animals that try to get away as you approach. So there is some life after all.</dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>NatureDC: (never saw vulcano's so -5 penalty)</dt>
+        <dd> >= 20 This land is very fertile due to the vulcanic soil.</dd>
+        <dt>NatureDC: (never saw vulcano's so -5 penalty)</dt>
+        <dd> >= 20 Trees got snapped due to sudden ruptures in the ground.</dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>SurvicalDC: (Food, penalty due to winter)</dt>
+        <dd> 15 >= Find food (20% chance on poison) </dd>
+        <dd>
+            20 >= Find food (fruits) and water (rain water) that is certainly not poisonous.
+                  Find food and water for another for every two points above 15.
+        </dd>
+    </dl>
+
 {% endblock %}
 
 {% block items %}
