--- a/src/templatefiles/templates/dnd/abstract/game_character.html
+++ b/src/templatefiles/templates/dnd/abstract/game_character.html
@@ -6,20 +6,21 @@
 {% block content %}
 
     <div class="row-fluid">
-        <div class="span12">
+        <div class="span8">
             {% block motivation %}
                 <p style="color: red;">no motivation!</p>
+            {% endblock %}
+            <hr/>
+            {% block story %}No story{% endblock %}
+        </div>
+        <div class="span4">
+            {% block image %}
+                <p>No image</p>
             {% endblock %}
         </div>
     </div>
 
-    <hr/>
 
-    <div class="row-fluid">
-        <div class="span12">
-            {% block story %}No story{% endblock %}
-        </div>
-    </div>
 
     <hr/>
 
