Add base for Formians.

--- a/src/templatefiles/templates/dnd/abstract/stats.html
+++ b/src/templatefiles/templates/dnd/abstract/stats.html
@@ -1,8 +1,5 @@
 <div class="row-fluid">
-    <div class="span2">
-        <p>Todo</p>
-    </div>
-    <div class="span10">
+    <div class="span12">
         {% block todo %}{% endblock %}
     </div>
 </div>
@@ -163,5 +160,11 @@
     </div>
     <div class="span10">
         {% block gear %}{% endblock %}
+    </div>
+</div>
+
+<div class="row-fluid">
+    <div class="span12">
+        {% block descriptions %}{% endblock %}
     </div>
 </div>
