--- a/src/templatefiles/templates/dnd/concrete/characters/Mirika+insane-half-elf.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Mirika+insane-half-elf.html
@@ -5,7 +5,10 @@ stats! how did Mirika get close to her father?
 {% endblock %}
 
 {% block name %}Mirika{% endblock %}
-{% block summary %}Rogue, Sorcerer, Arcane Trickster. Initially insane and needs to be cured so that her father will stop being in love with Rafana.{% endblock %}
+{% block summary %}
+    Rogue, Sorcerer, Arcane Trickster.
+    Initially insane and needs to be cured so that her father will stop being in love with Rafana.
+{% endblock %}
 
 {% block story %}
     <p>Mirika has her arcane powers from the human sorceress her father fell for. She's very rebellious and learned to evade her fathers magic from childhood</p>
