--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/overview.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/overview.html
@@ -24,13 +24,14 @@
     <dl id="corruption">
         <dt>Mild</dt>
         <dd>
-            Light sensitivity
+            Light sensitivity and low light vision
         </dd>
         <dt>Moderate</dt>
         <dd>
             <ul>
                 <li>
-                    Your fingers and toes are starting to contract. -10 speed, -2 attack, CasterDC 20 for each spell
+                    Your fingers and toes are starting to contract forming pincers.
+                    -10 speed, -2 attack, CasterDC 20 for each spell
                 </li>
                 <li>
                     Whenever you try to speak it is hard not to make it sound like an annoying zooming sound.
