--- a/src/templatefiles/templates/dnd/concrete/characters/Formian+tainted-myrmarch.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Formian+tainted-myrmarch.html
@@ -2,24 +2,15 @@
 {% load staticfiles %}
 
 {% block name %}Formian tainted worker{% endblock %}
-{% block summary %}Inhabitant of Big Ant Island. They patrol the beach in search for food and supplies{% endblock %}
-{% block motivation %}
-    <ul>
-        <li>Want to make their round to find supplies or food</li>
-        <li>Are afraid for their lives</li>
-    </ul>
-{% endblock %}
+{% block summary %}Inhabitant of Big Ant Island.{% endblock %}
+{% block motivation %}No motivation{% endblock %}
 {% block story %}
-    <p>
-        Workers are mostly scared. Their eyes are blood red and they have wings which makes them stand out with normal Formians.
-    </p>
     <p>
         All Formians on the island have been corrupted and deprivated by the evil that Hanuman's pure good soul attracts.
         The parasitic Stirges are the most common form of evil on the island.
-        Therefor everything on the island takes on traits of Stirges, like red eyes, sucking blood and they have grown wings.
-        This includes the Formians to a big degree.
+        Therefor the Formians have taken on traits of Stirges like sucking blood and they have grown wings.
         The queen is dead so they do not have a hive mind any more. Instead it is an everybody-for-themselves,
-        with gruesome results.
+        with grewsome results.
         Next to this they are so close to the power of Hanuman's soul that part of its power tries to manifest in them.
         They gain a few of the destructive powers of Hanuman's soul.
     </p>
@@ -27,6 +18,4 @@
 {% block image %}
     <p><img src="{% static "pics/formian.jpg" %}" alt="formian"/></p>
 {% endblock %}
-{% block stats %}
-    {% include "dnd/concrete/characters/stats/tainted-worker.html" %}
-{% endblock %}
+{% block stats %}No stats{% endblock %}
