--- a/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-warrior.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-warrior.html
@@ -10,6 +10,7 @@
 {% block special-attacks %}
     Improved grapple (pincers)
     Blood drain
+    Poison
 {% endblock %}
 {% block special-qualities %}
     Light sensitivity, Lowlight vision (60ft),
