--- a/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-warrior.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-warrior.html
@@ -1,11 +1,11 @@
 {% extends "dnd/abstract/stats.html" %}
 
-{% block hit-dice %}5 (1HD){% endblock %}
-{% block initiative %}+2{% endblock %}
+{% block hit-dice %}99hp (9HD){% endblock %}
+{% block initiative %}+3{% endblock %}
 {% block speed %}40 (fly 40 average){% endblock %}
-{% block ac %}10{% endblock %}
-{% block attacks %}+0{% endblock %}
-{% block damage %}0{% endblock %}
+{% block ac %}18 (t=13 ff=15){% endblock %}
+{% block attacks %}Sting +11, 2x claws +9, bite +9{% endblock %}
+{% block damage %}2d4+3 + FortDC14 1d6 Str (sting+poison), {% endblock %}
 {% block face-reach %}5ft.{% endblock %}
 {% block special-attacks %}
     Improved grapple (pincers)
@@ -20,30 +20,30 @@
 {% block spell-like-abilities %}{% endblock %}
 {% block saves %}
     <ul>
-        <li>Fort 0</li>
-        <li>Ref 0</li>
-        <li>Will 0</li>
+        <li>Fort +7</li>
+        <li>Ref +9</li>
+        <li>Will +6</li>
     </ul>
 {% endblock %}
 {% block abilities %}
     <ul>
-        <li>Str 10</li>
-        <li>Dex 10</li>
-        <li>Con 10</li>
+        <li>Str 17</li>
+        <li>Dex 16</li>
+        <li>Con 14</li>
         <li>Int 10</li>
-        <li>Wis 10</li>
-        <li>Cha 10</li>
+        <li>Wis 12</li>
+        <li>Cha 12</li>
     </ul>
 {% endblock %}
-{% block skills %}{% endblock %}
-{% block feats %}{% endblock %}
-{% block grapple %}+8{% endblock %}
+{% block skills %}Climb +10, Hide +10, Jump +14, Listen +8, Move Silently +10, (+3 following tracks), Tumble +12{% endblock %}
+{% block feats %}Dodge, Multiattack{% endblock %}
+{% block grapple %}+19{% endblock %}
 {% block gear %}{% endblock %}
 
 {% block descriptions %}
     <h4>Descriptions</h4>
     <dl>
-        <dt>Hanuman soul's infusion</dt>
+        <dt>Hanuman soul's infusion (2x, level 2)</dt>
         <dd>
             <p>
                 Take a random spell from the list below.
