Finish some of the more plain area's on the island.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/00-leaving-heaven-or-hell.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/00-leaving-heaven-or-hell.html
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>When evening falls continue with <a href="01-formian-first-contact.html">Formian first contact</a>.</p>
 {% endblock %}
 
 {% block creatures %}
@@ -58,7 +58,7 @@
         <li>Sleep: You are fatigued even though you just woke up.</li>
     </ul>
 
-    <p>Severe wind while being naked (40 mph) on beach especially</p>
+    <p>Severe wind while being naked on beach or climbing rocks (40 mph)</p>
     <ul>
         <li>Ranged weapons -4</li>
         <li>Each round make a Fort check</li>
@@ -79,7 +79,7 @@
         <dt>SurvivalDC: (Weather)</dt>
         <dd> 10 >= Storm will calm within a day.</dd>
         <dd> 15 >=
-           +2 Fort against the cold.
+           +2 Fort against the cold by using natural materials for cover.
            +2 Fort against the cold for another for every point above 15.
         </dd>
     </dl>
@@ -99,8 +99,4 @@
 
 {% block misc %}
     <p>no misc</p>
-{% endblock %}
-
-{% block achievements %}
-<p>When evening falls continue with <a href="01-formian-first-contact.html">Formian first contact</a>.</p>
 {% endblock %}
