--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
@@ -36,8 +36,8 @@
        <dd>2x 1d6 from random ability</dd>
     </dl>
     <dl class="dc">
-       <dt>FortDC: 20 (water from stream)</dt>
-       <dd>Fatigued & -10 Will saves</dd>
+       <dt>FortDC: 14 (water from stream)</dt>
+       <dd>-5 Will saves</dd>
     </dl>
 {% endblock %}
 
