--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
@@ -1,14 +1,10 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block todo %}
-    <p>Items, formians</p>
-{% endblock %}
-
 {% block title %}Beach, center{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block summary %}Place to start exploring the island, learn about the quest and discover relics{% endblock %}
 
 {% block events %}
-
+    <p>no events</p>
 {% endblock %}
 
 {% block locations %}
@@ -17,9 +13,9 @@
     <ul>
         <li>You're in a bay in the shape of a moon.</li>
         <li>Beyond the bay the sea stretches as far as you can see.</li>
-        <li>The "arms" of the bay are steep rocks that lead up to an even steeper landscape in the middle.</li>
+        <li>The headlands of the bay are steep rocks that lead up to an even steeper landscape in the middle.</li>
         <li>What lies beyond that small mountain you do not know.</li>
-        <li>From the beach you can get to small mountain by going through a jungle landscape.</li>
+        <li>From the beach you can get to the small mountain by going through a jungle landscape.</li>
         <li>In the middle the top of the small mountain is lower than the side of it.</li>
         <li>A small waterfall drops from the middle.</li>
         <li>It looks like you awoke in paradise, but the strong wind and brutal waves tell you otherwise.</li>
