--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-left.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-left.html
@@ -1,14 +1,29 @@
 {% extends "dnd/abstract/place.html" %}
 
 {% block title %}Beach, left{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block summary %}
+    Nothing special happens here, but it is the easiest place to spot to the abandoned village and get to Purple Tree.
+{% endblock %}
 
 {% block events %}
-    <p>no events</p>
+    <p>Walking on the beach you can do a SpotDC15 to notice an abandoned houses not far inland.</p>
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>From here you can go to: (seen from back towards sea)</p>
+    <ul>
+        <li>
+            Up the <a href="">headland</a> to your left.
+            This seems a very though climb due to the thick growth.
+        </li>
+        <li>
+            A small stream in front of the headland is going into the sea.
+            Follow that stream into <a href="abandoned-village.html">milder wilderness</a>
+        </li>
+        <li>To the <a href="beach-center.html">beach</a> on your right</li>
+        <li><a href="abandoned-village.html">Inland</a> (towards village if SpotDC15)</li>
+        <li>The wild <a href="sea.html">sea</a> lies behind you</li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
@@ -20,7 +35,11 @@
 {% endblock %}
 
 {% block traps %}
-    <p>no traps</p>
+    <p>Water from the stream is mildly poisoned (knowledges allowed after poisoning).</p>
+    <dl class="dc">
+       <dt>FortDC: 14 (water from stream)</dt>
+       <dd>-5 Will saves</dd>
+    </dl>
 {% endblock %}
 
 {% block conditions %}
@@ -28,6 +47,11 @@
 {% endblock %}
 
 {% block knowledges %}
+    <dl class="dc">
+        <dt>SpotDC: 15</dt>
+        <dd>See abandoned houses in the distance, but not far inland.</dd>
+    </dl>
+
     <dl class="dc">
         <dt>SurvivalDC:</dt>
         <dd> >= 10 Large groups (around 10) of monstrous humanoids seem to walk on this beach with some regularity</dd>
@@ -42,6 +66,11 @@
         <dd> 15 >= Details about Workers and Warriors</dd>
         <dd> 20 >= Details about Taskmasters and Myrmarchs</dd>
         <dd> 25 >= Details about Queens</dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>KnowledgeNatureDC: (poisoned water)</dt>
+        <dd>15 >= Such a mild poison here means there must be something more potent upstream.</dd>
     </dl>
 {% endblock %}
 
