Small update for inland-center.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-center.html
@@ -1,9 +1,7 @@
 {% extends "dnd/abstract/place.html" %}
 
 {% block title %}Inland center{% endblock %}
-{% block summary %}No summary{% endblock %}
-
-{% block todo %}Check water poison for strength{% endblock %}
+{% block summary %}A jungle area, but without serious threats{% endblock %}
 
 {% block events %}
     <p>As you walk through the jungle you some trees that seem to have been snapped in two that obstruct the way.</p>
