Started to think about the solutions for getting away.

--- a/src/templatefiles/templates/dnd/concrete/characters/stats/empty.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/empty.html
@@ -3,7 +3,7 @@
 {% block hit-dice %}0{% endblock %}
 {% block initiative %}+0{% endblock %}
 {% block speed %}30{% endblock %}
-{% block ac %}10{% endblock %}
+{% block ac %}10 (t=10, ff=10){% endblock %}
 {% block attacks %}+0{% endblock %}
 {% block damage %}0{% endblock %}
 {% block face-reach %}5ft.{% endblock %}
