--- a/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-myrmarch.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-myrmarch.html
@@ -17,7 +17,9 @@
     Resistance to electricity 10, fire 10, and sonic 10
     Immunity to poison, petrification and cold
 {% endblock %}
-{% block spell-like-abilities %}{% endblock %}
+{% block spell-like-abilities %}
+    Hanuman soul's charge
+{% endblock %}
 {% block saves %}
     <ul>
         <li>Fort 0</li>
@@ -43,12 +45,13 @@
 {% block descriptions %}
     <h4>Descriptions</h4>
     <dl>
-        <dt>Hanuman soul's infusion</dt>
+        <dt>Hanuman soul's charge</dt>
         <dd>
             <p>
                 Take a random spell from the list below.
                 Creature can perform this spell Cha-score -10 times per day (minimum 1).
-                Ability is at a level of Cha-score -10 (minimum 1).
+                Ability is at a HD spell level.
+                Max spell is equal to Cha-score -10
             </p>
             <ol>
                 <li>Ray of frost</li>
@@ -66,6 +69,6 @@
         <dt>Improved grapple</dt>
         <dd><p>Tainted formians can grapple with +8 bonus when they bite or claw</p></dd>
         <dt>Blood drain</dt>
-        <dd><p>When grappling tainted formians deal 1d4 Con damage at the beginning of their turn.</p></dd>
+        <dd><p>When grappling tainted formians deal 1d4 Con damage at the beginning of their turn by sucking blood.</p></dd>
     </dl>
 {% endblock %}
