--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/overview.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/overview.html
@@ -21,6 +21,11 @@
         <dd> < 24 Suffer 2d4 depravity</dd>
     </dl>
 
+    <dl class="dc">
+        <dt>ReflDC:</dt>
+        <dd> < 24 Suffer 2d4 charge</dd>
+    </dl>
+
     <dl id="corruption">
         <dt>Mild</dt>
         <dd>
@@ -94,6 +99,57 @@
             Schade: unconcious (start breathing normally)
 
             Met seks als urge ben je obsessed. Je krijgt -2 op Wis en Cha
+        </dd>
+    </dl>
+
+    <dl id="charge">
+        <dt>Mild</dt>
+        <dd>
+            Give each other a shock when touching. +1 damage unarmed attacks
+        </dd>
+        <dt>Moderate</dt>
+        <dd>
+            <p>
+                Pick a spell at random from this list.
+                Maximum level is Cha-10/2 rounded down (minimum 1)
+                Use this spell an amount of Cha-10 times a day
+                Caster level is equal to your HD
+            </p>
+            <ol>
+                <li>Ray of frost</li>
+                <li>Electric jolt</li>
+                <li>Magic missile</li>
+                <li>Shocking grasp</li>
+                <li>Ray of ice</li>
+                <li>Scorching ray</li>
+                <li>Fireball</li>
+                <li>Rainbow blast</li>
+                <li>Force missiles</li>
+                <li>Shout</li>
+            </ol>
+        </dd>
+        <dt>Severe</dt>
+        <dd>
+            <p>
+                Pick a spell at random from this list.
+                The spell replaces the spell from moderate exposure, unless that spell is more powerful.
+                In that case keep both.
+                Maximum level is Cha-10 (minimum 1).
+                Use this spell an amount of Cha-10 times a day
+                Caster level is equal to your HD
+            </p>
+            <ol>
+                <li>Ray of frost</li>
+                <li>Electric jolt</li>
+                <li>Magic missile</li>
+                <li>Shocking grasp</li>
+                <li>Ray of ice</li>
+                <li>Scorching ray</li>
+                <li>Fireball</li>
+                <li>Rainbow blast</li>
+                <li>Force missiles</li>
+                <li>Shout</li>
+            </ol>
         </dd>
     </dl>
 
