--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/vulcano-ring.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/vulcano-ring.html
@@ -1,1 +1,4 @@
 {% extends "dnd/abstract/place.html" %}
+
+<p>Another save for taint.</p>
+<p>Meet third party member there who owns the boat. He can also fix the boat, but he wants something else ...</p>
