--- a/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-worker.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-worker.html
@@ -5,7 +5,7 @@
 {% block speed %}40 (fly 40 average){% endblock %}
 {% block ac %}17 (t=13 ff=15){% endblock %}
 {% block attacks %}+7{% endblock %}
-{% block damage %}1d4+1{% endblock %}
+{% block damage %}1d4+2{% endblock %}
 {% block face-reach %}5ft.{% endblock %}
 {% block special-attacks %}
     Improved grapple (pincers)
@@ -17,6 +17,7 @@
     Immunity to poison, petrification and cold
 {% endblock %}
 {% block spell-like-abilities %}
+    Hanuman soul's charge
     CSW (8 workers)
     Make whole (3 workers)
 {% endblock %}
@@ -45,29 +46,24 @@
 {% block descriptions %}
     <h4>Descriptions</h4>
     <dl>
-        <dt>Hanuman soul's infusion (1x, level 1)</dt>
+        <dt>Hanuman soul's charge (1x, level 5)</dt>
         <dd>
             <p>
                 Take a random spell from the list below.
                 Creature can perform this spell Cha-score -10 times per day (minimum 1).
-                Ability is at a level of Cha-score -10 (minimum 1).
+                Ability is at a HD spell level.
+                Max spell is equal to Cha-score -10
             </p>
             <ol>
                 <li>Ray of frost</li>
                 <li>Electric jolt</li>
                 <li>Magic missile</li>
                 <li>Shocking grasp</li>
-                <li>Ray of ice</li>
-                <li>Scorching ray</li>
-                <li>Fireball</li>
-                <li>Rainbow blast</li>
-                <li>Force missiles</li>
-                <li>Shout</li>
             </ol>
         </dd>
         <dt>Improved grapple</dt>
         <dd><p>Tainted formians can grapple with +8 bonus when they bite or claw</p></dd>
         <dt>Blood drain</dt>
-        <dd><p>When grappling tainted formians deal 1d4 Con damage at the beginning of their turn.</p></dd>
+        <dd><p>When grappling tainted formians deal 1d4 Con damage at the beginning of their turn by sucking blood.</p></dd>
     </dl>
 {% endblock %}
