Adding information for headlands and going around the island.

--- a/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-warrior.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-warrior.html
@@ -2,7 +2,7 @@
 
 {% block hit-dice %}99hp (9HD){% endblock %}
 {% block initiative %}+3{% endblock %}
-{% block speed %}40 (fly 40 average){% endblock %}
+{% block speed %}30 (fly 40 average){% endblock %}
 {% block ac %}18 (t=13 ff=15){% endblock %}
 {% block attacks %}Sting +11, 2x claws +9, bite +9{% endblock %}
 {% block damage %}2d4+4 + FortDC14 1d6 Str (sting+poison), 1d6+2 (claws), 1d4+2 (bite){% endblock %}
@@ -14,7 +14,7 @@
 {% endblock %}
 {% block special-qualities %}
     Light sensitivity, Lowlight vision (60ft),
-    Resistance to electricity 10, fire 10, and sonic 10
+    Resistance to electricity 10, fire 10, and sonic 10,
     Immunity to poison, petrification and cold
 {% endblock %}
 {% block spell-like-abilities %}
