--- a/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-worker.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-worker.html
@@ -2,7 +2,7 @@
 
 {% block hit-dice %}40 (5HD){% endblock %}
 {% block initiative %}+2{% endblock %}
-{% block speed %}40 (fly 40 average){% endblock %}
+{% block speed %}30 (fly 40 average){% endblock %}
 {% block ac %}17 (t=13 ff=15){% endblock %}
 {% block attacks %}+7{% endblock %}
 {% block damage %}1d4+2{% endblock %}
@@ -13,7 +13,7 @@
 {% endblock %}
 {% block special-qualities %}
     Light sensitivity, Lowlight vision (60ft),
-    Resistance to electricity 10, fire 10, and sonic 10
+    Resistance to electricity 10, fire 10, and sonic 10,
     Immunity to poison, petrification and cold
 {% endblock %}
 {% block spell-like-abilities %}
