--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
@@ -11,11 +11,12 @@
 
     <p>In the immediate surroundings</p>
     <ul>
-        <li>You're in a bay in the shape of a moon.</li>
+        <li>You're on a beach that stretches around 500m.</li>
+        <li>The beach is part of a bay in the shape of a moon.</li>
         <li>Beyond the bay the sea stretches as far as you can see.</li>
         <li>The headlands of the bay are steep rocks that lead up to an even steeper landscape in the middle.</li>
-        <li>What lies beyond that small mountain you do not know.</li>
-        <li>From the beach you can get to the small mountain by going through a jungle landscape.</li>
+        <li>What lies beyond that you do not know.</li>
+        <li>From the beach you can get to a big hill by going inland through a jungle landscape.</li>
         <li>In the middle the top of the small mountain is lower than the side of it.</li>
         <li>A small waterfall drops from the middle.</li>
         <li>It looks like you awoke in paradise, but the strong wind and brutal waves tell you otherwise.</li>
