--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-left.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-left.html
@@ -13,8 +13,9 @@
     <p>From here you can go to: (seen from back towards sea)</p>
     <ul>
         <li>
-            Up the <a href="">headland</a> to your left.
-            This seems a very though climb due to the thick growth.
+            Up the <a href=headland.html"">headland</a> to your left.
+            This seems a very though climb (ClimbDC25) due to steepness (+5) and the thick growth (+5).
+            You can also go <a href="headland.html">around the headland</a>
         </li>
         <li>
             A small stream in front of the headland is going into the sea.
@@ -39,6 +40,14 @@
     <dl class="dc">
        <dt>FortDC: 14 (water from stream)</dt>
        <dd>-5 Will saves</dd>
+    </dl>
+
+    <p>It is possible to climb to whatever is behind the headland.</p>
+    <dl class="dc">
+        <dt>ClimbDC: (to move to next headland, slippery surface penalty +5)</dt>
+        <dd> <= 15 Fall into the sea</dd>
+        <dd> < 20 Stay put, try again</dd>
+        <dd> >= Proceed with next check (make 5 checks)</dd>
     </dl>
 {% endblock %}
 
